# project-ra

./: .env  .gitignore  .woodpecker.yml  Makefile  README.md  additional_integrations.md  docker-compose.yaml  mkdocs.yml  noxfile.py  pyproject.toml  requirements-dev.txt  requirements-docs.txt  requirements.txt  versions.json
0.1.0/: index.html
0.1.0/search/: search_index.json
0.1.0/todo/: index.html
0.1.1/: 404.html  index.html
0.1.1/getting-started/pre-reqs/: index.html
0.1.1/home-assistant/victron/: index.html
0.1.1/lessons-learned/: index.html
0.1.1/search/: search_index.json
0.1.1/system-overview/: index.html
0.1.1/todo/: index.html
0.1.1/victron/home-assistant/: index.html
0.1.1/victron/off-peak-charging/: index.html
0.1.1/victron/victron/: index.html
0.1.4/: 404.html
0.1.4/getting-started/pre-reqs/: index.html
0.1.4/lessons-learned/: index.html
develop/getting-started/pre-reqs/: index.html
develop/home-assistant/victron/: index.html
develop/lessons-learned/: index.html
develop/system-overview/: index.html
develop/theme/overrides/: main.html
develop/todo/: index.html
develop/victron/home-assistant/: index.html
develop/victron/off-peak-charging/: index.html
develop/victron/victron/: index.html
docs/: index.md  lessons-learned.md  todo.md  victron.md
docs/getting-started/: pre-reqs.md
docs/home-assistant/: victron.md
docs/home-assistant/extensions/: hacs.md
docs/victron/: home-assistant.md  off-peak-charging.md  victron.md
esphome/: secrets.yaml.example  sonoff_basic_r2.yaml  sonoff_dual_r2.yaml
home-assistant/: configuration.yaml  modbus.yaml  secrets.yaml
home-assistant/sensor/: sensor_modbus.yaml
stable/getting-started/pre-reqs/: index.html
stable/home-assistant/victron/: index.html
stable/lessons-learned/: index.html
stable/system-overview/: index.html
victron/: victron_charge.py
