[tool.poetry]
name = "project-ra"
version = "0.1.1"
description = ""
authors = ["Darth Veitcher <darth-veitcher@statemachine.ai>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"
nox = "^2022.8.7"
pytest-cov = "^4.0.0"
coverage = {extras = ["toml"], version = "^6.5.0"}
pre-commit = "^2.20.0"

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
pylama = {extras = ["lint"], version = "^8.4.1"}
black = "^22.10.0"
flake8 = "^5.0.4"
flake8-black = "^0.3.3"
flake8-isort = "^5.0.0"
flake8-bandit = "^4.1.1"
darglint = "^1.8.1"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.1"
mkdocs-material = "^8.5.7"
pymdown-extensions = "^9.7"
mkdocs-minify-plugin = "^0.6.0"
mike = "^1.1.2"


[tool.poetry.group.victron.dependencies]
pymodbus = {extras = ["serial"], version = "^3.0.0"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
